@@ -3,10 +3,12 @@
 - diskdrake: 
   o fix resizing/formatting ntfs (broken because of ntfs-3g switch in previous
     release)
+  o fix partition device name for some dmraid (missing "p", cf #38363)
   o do not timeout after 10 minutes when resizing NTFS partition
 - detect_devices:
   o provide sysfs device path on Firewire and PCMCIA bus
     (to be able to fix #33950 in drakx-net)
+
 Version 10.9 - 5 March 2008
 
 - adapt to new kernel-2.6.25's sysfs layout (Eric Pielbug, #38235)
